# paradise-netrek

./: .gitignore  db_convert.c  readme.md
paradise-client-3.3p0/: Makefile.in  README  configure  configure.in
paradise-client-3.3p0/docs/: CHANGELOG  README  README.SOUND  TODO  paradise.1  paradise.1.in  sample.paradiserc
paradise-client-3.3p0/images/: README  cloak.xbm  cloak.xpm  credits  dashboard_bg.xpm  default.xbm  emph_planet_seq.xbm  emph_player_seq.xbm  emph_player_seql.xbm  exp2.xpm  explosion.xbm  hull.xbm  oldexp.xpm  rainbow.xpm  sbexplosion.xbm  stipple.xbm  warpbeacon.xbm  warpflash.xbm
paradise-client-3.3p0/images/Fed/: AS.xbm  AS.xpm  BB.xbm  BB.xpm  CA.xbm  CA.xpm  CL.xbm  CL.xpm  CV.xbm  CV.xpm  DD.xbm  DD.xpm  FR.xbm  FR.xpm  JS.xbm  JS.xpm  PT.xbm  PT.xpm  SB.xbm  SB.xpm  SC.xbm  SC.xpm  UT.xbm  UT.xpm  WB.xbm  WB.xpm
paradise-client-3.3p0/images/Fed.bronco/: AS.xpm  BB.xpm  CA.xpm  DD.xpm  SB.xpm  SC.xpm
paradise-client-3.3p0/images/Fed.bronco.colored/: AS.xpm  AT.xpm  BB.xpm  CA.xpm  DD.xpm  SB.xpm  SC.xpm
paradise-client-3.3p0/images/Fed.colored/: AS.xpm  AT.xpm  BB.xpm  CA.xpm  CL.xpm  CV.xpm  DD.xpm  FR.xpm  JS.xpm  PT.xpm  SB.xpm  SC.xpm  UT.xpm  WB.xpm
paradise-client-3.3p0/images/Ind/: AS.xbm  AS.xpm  AT.xbm  AT.xpm  BB.xbm  BB.xpm  CA.xbm  CA.xpm  CL.xbm  CL.xpm  CV.xbm  CV.xpm  DD.xbm  DD.xpm  FR.xbm  FR.xpm  JS.xbm  JS.xpm  PT.xbm  PT.xpm  PU.xbm  SB.xbm  SB.xpm  SC.xbm  SC.xpm  UT.xbm  UT.xpm  WB.xbm  WB.xpm
paradise-client-3.3p0/images/Kli/: AS.xbm  AS.xpm  BB.xbm  BB.xpm  CA.xbm  CA.xpm  CL.xbm  CL.xpm  CV.xbm  CV.xpm  DD.xbm  DD.xpm  FR.xbm  JS.xbm  JS.xpm  PT.xbm  PT.xpm  SB.xbm  SB.xpm  SC.xbm  SC.xpm  UT.xbm  UT.xpm  WB.xbm  WB.xpm
paradise-client-3.3p0/images/Kli.bronco/: AS.xpm  AT.xpm  BB.xpm  CA.xpm  DD.xpm  SB.xpm  SC.xpm
paradise-client-3.3p0/images/Kli.bronco.colored/: AS.xpm  AT.xpm  BB.xpm  CA.xpm  DD.xpm  SB.xpm  SC.xpm
paradise-client-3.3p0/images/Kli.colored/: AS.xpm  AT.xpm  BB.xpm  CA.xpm  CL.xpm  CV.xpm  DD.xpm  FR.xpm  JS.xpm  PT.xpm  SB.xpm  SC.xpm  UT.xpm  WB.xpm
paradise-client-3.3p0/images/Ori/: AS.xbm  AS.xpm  BB.xbm  BB.xpm  CA.xbm  CA.xpm  CL.xbm  CL.xpm  CV.xbm  CV.xpm  DD.xbm  DD.xpm  FR.xbm  JS.xbm  JS.xpm  PT.xbm  PT.xpm  SB.xbm  SB.xpm  SC.xbm  SC.xpm  UT.xbm  UT.xpm  WB.xbm  WB.xpm
paradise-client-3.3p0/images/Ori.bronco/: AS.xpm  AT.xpm  BB.xpm  CA.xpm  DD.xpm  SB.xpm  SC.xpm
paradise-client-3.3p0/images/Ori.bronco.colored/: AS.xpm  AT.xpm  BB.xpm  CA.xpm  DD.xpm  SB.xpm  SC.xpm
paradise-client-3.3p0/images/Ori.colored/: AS.xpm  AT.xpm  BB.xpm  CA.xpm  CL.xpm  CV.xpm  DD.xpm  FR.xpm  JS.xpm  PT.xpm  SB.xpm  SC.xpm  UT.xpm  WB.xpm
paradise-client-3.3p0/images/Rom/: AS.xbm  AS.xpm  BB.xbm  BB.xpm  CA.xbm  CA.xpm  CL.xbm  CL.xpm  CV.xbm  CV.xpm  DD.xbm  DD.xpm  FR.xbm  FR.xpm  JS.xbm  JS.xpm  PT.xbm  PT.xpm  SB.xbm  SB.xpm  SC.xbm  SC.xpm  UT.xbm  UT.xpm  WB.xbm  WB.xpm
paradise-client-3.3p0/images/Rom.bronco/: AS.xpm  AS.xpm.painted  BB.xpm  CA.xpm  CA.xpm.painted  DD.xpm  DD.xpm.painted  SB.xpm  SC.xpm  SC.xpm.painted
paradise-client-3.3p0/images/Rom.bronco.colored/: AS.xpm  AT.xpm  BB.xpm  BB.xpm.painted  CA.xpm  DD.xpm  SB.xpm  SC.xpm
paradise-client-3.3p0/images/Rom.colored/: AS.xpm  AT.xpm  BB.xpm  CA.xpm  CL.xpm  CV.xpm  DD.xpm  FR.xpm  JS.xpm  PT.xpm  SB.xpm  SC.xpm  UT.xpm  WB.xpm
paradise-client-3.3p0/images/intro/: clock.xbm  fedshield.xbm  fedshield.xpm  header.xpm  header1.xbm  header2.xbm  header3.xbm  header4.xbm  headerA.xbm  headerB.xbm  icon.xbm  klishield.xbm  klishield.xpm  noentry.xbm  noentry.xpm  orishield.xbm  orishield.xpm  romshield.xbm  romshield.xpm  safe.xbm
paradise-client-3.3p0/images/newstats/: flag_alert.xbm  flag_army.xbm  flag_beaming.xbm  flag_bomb.xbm  flag_cloak.xbm  flag_down.xbm  flag_etemp.xbm  flag_fed.xbm  flag_fighter.xbm  flag_fuel.xbm  flag_fuse.xbm  flag_hull.xbm  flag_kli.xbm  flag_missile.xbm  flag_ori.xbm  flag_plasma.xbm  flag_pressor.xbm  flag_repair.xbm  flag_rom.xbm  flag_ship_fed.xbm  flag_ship_kli.xbm  flag_ship_ori.xbm  flag_ship_rom.xbm  flag_speed1.xbm  flag_speed2.xbm  flag_torp.xbm  flag_tractor.xbm  flag_up.xbm  flag_war.xbm  flag_wtemp.xbm  status_template.xbm
paradise-client-3.3p0/images/planets/: MOObarren.xbm  MOObarren.xpm  MOOmbarren.xbm  barren_overlay.xbm  masteroid.xbm  mplan_noinfo.xbm  mplan_noinfo.xpm  mwormhole.xbm  mwormhole.xpm  plan_noinfo.xbm  plan_noinfo.xpm  star.xbm  star.xpm  starm.xbm  starm.xpm  wormhole.xbm  wormhole.xpm
paradise-client-3.3p0/images/weapons/: edrone.xbm  edrone.xpm  edronecloud.xpm  efighter.xpm  eplasmacloud.xbm  eplasmacloud.xpm  eplasmatorp.xbm  eplasmatorp.xpm  etorp.xbm  etorp.xpm  (+15 more)
paradise-client-3.3p0/include/: Wlib.h  config.h.in  conftime.h  data.h  defs.h  gameconf.h  gppackets.h  images.h  linux_pcsp.h  linux_soundcard.h  packets.h  proto.h  sound.h  sound2.h  str.h  struct.h  wtext.h
paradise-client-3.3p0/scripts/: make_shippicfile.perl.in  mkcredits.in  mkimgsrc.broken  mkimgsrc.in  mkimgsrc.works  netrektoxbm.in  numtoship.in  rotate.sh  scrambleargs.in  unused_images.in
paradise-client-3.3p0/src/: Makefile.in  beeplite.c  blk_parsemotd.c  colors.c  credits.c  dashboard.c  data.c  death.c  defaults.c  defwin.c  detonate.c  distress.c  dmessage.c  enter.c  expire.c.in  feature.c  findslot.c  gameconf.c  getname.c  getship.c  helpwin.c  hockey.c  images.c  inform.c  input.c  interface.c  keymap.c  lib.c  local.c  macros.c  macrowin.c  main.c  map.c  motdwin.c  newstats.c  newwin.c  option.c  packets.c  paradise.sndsrv.freebsd.2.c  paradise.sndsrv.freebsd.c  (+32 more)
paradise-server-3.1p0/: .gitignore  Makefile.in  configure  configure.in
paradise-server-3.1p0/docs/: CHANGELOG  CREDITS  README.Admin  README.Changes  README.League  README.Tools  README.rsa-exemption  README.sysdef  TODO
paradise-server-3.1p0/etc/: cluephrases  conf.balanced  conf.hours  conf.netrekdir  conf.pics  conf.sysdef  motd  ranks.conf  ranks.conf.ranks2
paradise-server-3.1p0/pics/: Mecha.xbm  cd.xbm  enterprise.xbm  info.xbm
paradise-server-3.1p0/src/: Makefile.in  Makefile.in.org
(+314 files in other folders)
